k8s/api-gateway-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: java-aws-microservice
  labels:
    app: api-gateway

spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: 979667334110.dkr.ecr.ap-south-1.amazonaws.com/api-gateway:46bbfe9daee614114284a3b04ca3ee2cd0179dcf-41
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: java-aws-microservice
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
