k8s/eureka-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server-deployment
  namespace: java-aws-microservice
  labels:
    app: eureka-server

spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: 979667334110.dkr.ecr.ap-south-1.amazonaws.com/eureka-server:46bbfe9daee614114284a3b04ca3ee2cd0179dcf-41
          ports:
            - containerPort: 8761
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-service
  namespace: java-aws-microservice
spec:
  selector:
    app: eureka-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: ClusterIP
