k8s/order-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
  namespace: java-aws-microservice
  labels:
    app: order-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: 979667334110.dkr.ecr.ap-south-1.amazonaws.com/order-service:6cebf096fbbec43946f814e5c0e28616a95b0c5d-43
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-service
  namespace: java-aws-microservice
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
