k8s/user-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: java-aws-microservice
  labels:
    app: user-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 979667334110.dkr.ecr.ap-south-1.amazonaws.com/user-service:171c95d0670a1090bc17ee4c58c6f72c038fd756-40
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-service
  namespace: java-aws-microservice
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
