k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-aws-ingress
  namespace: java-aws-microservice
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka-server-service   # Replace with your service name
                port:
                  number: 8761       # Replace with your service port
